fix! media queries for front +info section + corrected cotainerised element which were overflowing

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -71,11 +71,11 @@ body {
 }
 
 .info-box .info-title {
-    height: 3.75rem;
-    width: 100%;
+    width: fit-content;
     display: flex;
     padding: 0 30px;
     border-radius: 5px 5px 0 0;
+    align-items: center;
     font-family: 'Roboto Slab', serif;
     font-size: 28px;
     text-decoration: underline;
@@ -92,7 +92,6 @@ body {
 }
 
 .info-box .buttons {
-    height: 3.75rem;
     display: flex;
     align-items: center;
     justify-content: flex-end;
@@ -145,7 +144,7 @@ body {
 }
 
 .quiz-header .timer {
-    color: #50C878;
+    color: black;
     background: white;
     border: 1px solid white;
     height: 2.813rem;
@@ -398,7 +397,7 @@ footer {
         color: white;
         white-space: nowrap;
         opacity: 1;
-        width: 99%;
+        width: 97%;
         display: flex;
         justify-content: center;
         top: 93%;
@@ -412,75 +411,93 @@ footer .hide {
 
 /* start of Media Queries */
 
-@media screen and (max-width: 730px){
-    section .option-list .option:hover{
-        border:1px solid inherit;
-    }
+/* Default styles */
 
-} 
-@media screen and (max-width: 660px) {
-    body {
-        overflow: hidden;
+/* Add default styles here, these will be applied to all screen sizes */
+
+/* Media queries */
+
+/* For screen sizes up to 760px */
+@media screen and (max-width: 600px) {
+    footer {
+        top: auto;
+        bottom: 0;
+    }
+    .start-btn {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    }
+    .info-box {
+        width: 400px;
+        opacity: 0;
+        pointer-events: none;
+        transition: all 0, 3s ease;
+        background: white;
+        border-radius: 10px;
+        position: fixed;
+        left: 50%;
+        right: 50%;
+        /* height: 0x; */
+    }
+    .quiz-box {
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width:84%;
+    }
+    .result-box {
+        background: white;
+        display: flex;
+        padding: 25px 30px;
+        width: 81%;
+        align-items: center;
+        flex-direction: column;
+        justify-content: center;
+        transform: translate(-50% -50%)scale(0.9);
+        opacity: 0;
+        pointer-events: none;
+        transition: all 0.3s ease;
+        font-family: 'Roboto Slab', serif;
+        border-radius: 18px;
     }
 }
 
-@media screen and (max-width: 520px) {
-    .info-box .info-title {
-        font-size: 25px;
-    }
-
-    .info-box .infolist {
-        padding: 10px 30px;
-    }
-
-    .info {
-        font-size: 13px;
-    }
-
-    .info-box .buttons button {
-        width: 5.25rem;
-        font-size: 11px;
-    }
+@media screen and (max-width: 510px) {
 
     .info-box {
-        width: 385px;
+        width: 90%;
     }
-
-    .info-box .infolist .info {
-        font-size: 13px;
+    .info-box .info-title {
+        /* height: 3.75rem; */
+        font-size: 26px;
     }
 }
 
-@media screen and (max-width: 460px) {
-
+@media screen and (max-width: 395px) {
     .welcome-title h1 {
-        font-size: 25px
+        font-size: 28px;
     }
-
     footer {
         font-size: 13px;
     }
 }
-
-@media screen and (max-width: 414px) {
+@media screen and (max-width: 359px) {
     .info-box .info-title {
-        font-size: 22px;
+        font-size: 24px;
     }
-
     .info-box .infolist .info {
-        font-size: 12px;
-        padding: 0px 15px;
+        font-size: 13px;
     }
+}
 
-    .info-box {
-        width: 286px;
+@media screen and (max-width: 335px) {
+    .welcome-title h1 {
+        font-size: 26px;
     }
-
-    .info-box .buttons {
-        padding: 0 0px;
-    }
-
-    .info-box .buttons button {
-        width: 4.25rem;
+    .info-box .info-title {
+        /* height: 3.75rem; */
+        font-size: 22px;
     }
 }
